packages/optimizer/core/src/snapshots/qwik_core__test__should_merge_on_input_and_bind_checked.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 5193
expression: output
---
==INPUT==


import { component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
  const localValue = useSignal(false);

  return (
    <input
      bind:checked={localValue}
      onInput$={() => {
        console.log("test");
      }}
    />
  );
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_FieldInput_component_V4XAtJSTRKg = /*#__PURE__*/ qrl(()=>import("./test.tsx_FieldInput_component_V4XAtJSTRKg"), "FieldInput_component_V4XAtJSTRKg");
//
export const FieldInput = /*#__PURE__*/ componentQrl(q_FieldInput_component_V4XAtJSTRKg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,2BAAa,iDAWvB\"}")
============================= test.tsx_FieldInput_component_V4XAtJSTRKg.js (ENTRY POINT)==

import { _chk } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const q_FieldInput_component_input_q_e_input_wqR1xEjZjf4 = /*#__PURE__*/ qrl(()=>import("./test.tsx_FieldInput_component_input_q_e_input_wqR1xEjZjf4"), "FieldInput_component_input_q_e_input_wqR1xEjZjf4");
//
export const FieldInput_component_V4XAtJSTRKg = ()=>{
    const localValue = useSignal(false);
    return /*#__PURE__*/ _jsxSorted("input", null, {
        "checked": localValue,
        "q-e:input": [
            inlinedQrl(_chk, "_chk", [
                localValue
            ]),
            q_FieldInput_component_input_q_e_input_wqR1xEjZjf4
        ]
    }, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;gDAGqC;IACnC,MAAM,aAAa,UAAU;IAE7B,qBACE,WAAC;mBACe;;;gBAAA;;;;;AAMpB\"}")
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_V4XAtJSTRKg",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "V4XAtJSTRKg",
  "canonicalFilename": "test.tsx_FieldInput_component_V4XAtJSTRKg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    96,
    273
  ]
}
*/
============================= test.tsx_FieldInput_component_input_q_e_input_wqR1xEjZjf4.js (ENTRY POINT)==

export const FieldInput_component_input_q_e_input_wqR1xEjZjf4 = ()=>{
    console.log("test");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"gEASgB;IACR,QAAQ,GAAG,CAAC;AACd\"}")
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_q_e_input_wqR1xEjZjf4",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_q_e_input",
  "hash": "wqR1xEjZjf4",
  "canonicalFilename": "test.tsx_FieldInput_component_input_q_e_input_wqR1xEjZjf4",
  "path": "",
  "extension": "js",
  "parent": "FieldInput_component_V4XAtJSTRKg",
  "ctxKind": "eventHandler",
  "ctxName": "onInput$",
  "captures": false,
  "loc": [
    214,
    258
  ]
}
*/
== DIAGNOSTICS ==

[]
